docs: auth swagger documentation added
