# api/src/entities/user/userRouter.ts
@@ -8,7 +8,7 @@ const control = new UserController();
 const userRouter = Router();
 
 userRouter.get("/user", verifyToken, adminGuard, control.get.bind(control));
-userRouter.post("/user", verifyToken, adminGuard, control.create.bind(control));
+userRouter.post("/user", control.create.bind(control));
 userRouter.patch("/user", verifyToken, control.update.bind(control));
 
 userRouter.post("/login", control.login.bind(control));
